# goit_web_homework_7

./: LICENSE  README.md  config.ini  main.py  my_select.py  pyproject.toml
