[tool.poetry]
name = "goit_web_homework_6"
version = "0.1.0"
description = ""
authors = ["Andrew Linden say.elsword@gmail.com"]
readme = "README.md"
packages = [{include = "goit_web_homework_6"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.23"
poetry = "^1.6.1"
psycopg2 = "^2.9.9"
alembic = "^1.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
